[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ladder.gd" type="Script" id=1]
[ext_resource path="res://Graphics/ledder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5597, 101.677 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.2803, 5.6356 )

[node name="ladder" type="Node2D"]
script = ExtResource( 1 )

[node name="LadderArea" type="Area2D" parent="."]
position = Vector2( 0, -9.95961 )

[node name="LadderAreaColl" type="CollisionShape2D" parent="LadderArea"]
position = Vector2( 0.0328665, -0.0796947 )
shape = SubResource( 1 )

[node name="LadderTop" type="StaticBody2D" parent="."]

[node name="LadderTopColl" type="CollisionShape2D" parent="LadderTop"]
modulate = Color( 0.968627, 0, 0, 1 )
position = Vector2( 0, 0.0990372 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
